--- a/ui.apps/src/main/content/jcr_root/apps/fedex/components/rssfeed/rssfeed.html
+++ b/ui.apps/src/main/content/jcr_root/apps/fedex/components/rssfeed/rssfeed.html
@@ -1,25 +1,19 @@
-<div class="cmp-helloworld" data-cmp-is="helloworld">
-  <h2 class="cmp-helloworld__title">Hello World Component</h2>
-  <div class="cmp-helloworld__item" data-sly-test="${properties.text}">
-    <p class="cmp-helloworld__item-label">Text property:</p>
-    <pre class="cmp-helloworld__item-output" data-cmp-hook-helloworld="property">
-      ${properties.text}
-    </pre>
-  </div>
-  <div class="cmp-helloworld__item" data-sly-use.model="com.aem.fedex.core.models.RSSFeedModel"
+<div class="cmp-rssfeed" data-cmp-is="rssfeed">
+  <h2 class="cmp-rssfeed__title">Feed Reader</h2>
+
+  <div class="cmp-rssfeed__item" data-sly-use.model="com.aem.fedex.core.models.RSSFeedModel"
     data-sly-test="${model.rssFeeds}">
-    <p class="cmp-helloworld__item-label">Model message:</p>
-    <pre class="cmp-helloworld__item-output" data-cmp-hook-helloworld="model">
-      SIZE: ${model.rssFeeds.size}
+    <pre class="cmp-rssfeed__item-output" data-cmp-hook-rssfeed="model">
+      Count: ${model.rssFeeds.size}
     </pre>
 
-    <ul class="tagList" data-sly-list.rssFeed="${model.rssFeeds}">
+    <ol class="tagList" data-sly-list.rssFeed="${model.rssFeeds}">
       <li class="tagList__tag">
-        <div>${rssFeed.title}</div>
-        <div>${rssFeed.description}</div>
-        <div>${rssFeed.publishDate}</div>
+        <h3>${rssFeed.title}</h3>
+        <p>${rssFeed.description}</p>
+        <pre>${rssFeed.publishDate}</pre>
       </li>
-    </ul>
+    </ol>
 
   </div>
 </div>
